Istio-Canary/Istio-Ingress-Gateway-Config.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: my-istion-gateway
spec:
  selector:
    istio: ingressgateway # using Istio IngressGateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
